# panel

./: .gitignore  Cargo.toml  README.md  build.rs
html-src/: index.html  masm-bindings.js  masm.wasm  panel.html  viewer.html
src/: alerts.rs  bot.rs  conv.rs  logging.rs  main.rs  process.rs  server.rs  webhook.rs  websocket.rs
src/bot/: admin.rs  bans.rs  config.rs  exec.rs  js.rs  lb.rs  logic.rs  maps.rs  mod.rs  player.rs  rules.rs  schematic.rs  status.rs  trace.rs  usage.md  voting.rs
