[package]
name = "panel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = [
  "tokio",
  "http1",
], default-features = false }
futures = "0.3.28"
paste = "1.0.12"
tokio = { version = "1.28.2", features = [
  "macros",
  "net",
  "sync",
  "rt",
  "parking_lot",
  "time",
], default-features = false }
tokio-stream = "0.1.14"
futures-util = "0.3.28"
serenity = { version = "0.11.5", features = [
  "builder",
  "client",
  "utils",
  "rustls_backend",
  "gateway",
], default-features = false }
poise = "0.5.5"
anyhow = "1.0.71"
regex = { version = "1.8.4", features = ["std"], default-features = false }
minify-js = "0.5.6"
itertools = "0.10.5"
convert_case = "0.6.0"
parse_duration = "2.1.1"
serde = "1.0"
serde_json = "1.0"
btparse = "0.1.1"
mindus = { version = "3", features = [], default-features = false }
image = { version = "0.24.6", features = ["png"], default-features = false }
oxipng = { git = "https://github.com/shssoichiro/oxipng", branch = "master", features = [], default-features = false }

[profile.release]
strip = true

[build-dependencies]
minify-html = "0.11.1"

[profile.dev.package."*"]
opt-level = 3
