[package]
name = "panel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = [
  "tokio",
  "http1",
], default-features = false }
futures = "0.3.28"
paste = "1.0.12"
tokio = { version = "1.28.2", features = [
  "macros",
  "net",
  "sync",
  "rt",
  "parking_lot",
  "time",
  "process",
], default-features = false }
tokio-stream = "0.1.14"
futures-util = "0.3.28"
serenity = { version = "0.12", features = [
  "builder",
  "client",
  "utils",
  "rustls_backend",
  "gateway",
], default-features = false }
poise = { git = "https://github.com/serenity-rs/poise" }
anyhow = "1.0.75"
regex = { version = "1.8.4", features = ["std"], default-features = false }
convert_case = "0.6.0"
parse_duration = "2.1.1"
serde = "1.0"
btparse = "0.1.1"
mindus = { version = "5.0.18", features = [], default-features = false }
oxipng = { git = "https://github.com/shssoichiro/oxipng", branch = "master", default-features = false }
flate2 = { version = "1.0", features = [
  "cloudflare_zlib",
], default-features = false }
strip-ansi-escapes = "0.2.0"
phf = { version = "0.11.2", features = ["macros"] }
itertools = "0.11.0"
emoji = { git = "https://github.com/Apricot-Conservation-Project/emoji" }
serde_derive = "1.0.193"
serde_json = "1.0.109"
strconv = "0.1.0"
jemallocator-global = "0.3.2"

[profile.release]
strip = true
lto = "thin"

[profile.dev.package.mindus]
opt-level = 3
